﻿<h3>Version 1.6.1</h3>
<ul>
    <li>DivisionDirectory, EmployeeDirectory: Use Bootstrap styles for grids in search mode.</li>
    <li>DivisionDirectory, EmployeeDirectory: Hide not published divisions in search treeviews.</li>
    <li>DivisionDirectory: Hide not published divisions from regular users, mark them for editors.</li>
    <li>MSBuild.Community.Tasks dependency resolved via NuGet.</li>
    <li>Changes to allow build project using xbuild on Mono 4.</li>
    <li>Include module controls and resources in local deploy (project source files now relocatable).</li>
</ul>

<h3>Version 1.6.0</h3>
<ul>
    <li>Add EduProgramDirectory module.</li>
    <li>Add sort index to the educational level model.</li>
    <li>Educational level and document type models now cacheable.</li>
</ul>

<h3>Version 1.5.1</h3>
<ul>
    <li>Fix null reference exception then accessing empty viewstate.</li>
</ul>

<h3>Version 1.5.0</h3>
<p>Main goal: Enhance DivisionDirectory module obrnadzor.gov.ru mode.</p>
<ul>
    <li>Add ability loose-link divisions and head employees by specifying required position.</li>
    <li>Partial support for virtual divisions (which generally w/o employees).</li>
    <li>EditDivision: support for new division properties.</li>
    <li>Implement hierarchical sorting of divisions.</li>
    <li>Some visual enhancements - indents, block dividers.</li>
    <li>Other small updates and fixes.</li>
</ul>

<h3>Version 1.4.0</h3>
<p>Main goal: Add support for documents and document types and allow to manage educational program documents.</p>

<h3>Version 1.3.1</h3>
<ul>
    <li>Fix #77: EditEmployee: crash when opening in DNN 7.4.2.</li>
    <li>Update uninstall script to drop tables and views added in 1.3.0.</li>
    <li>Set library and module CoreVersion dependency to DNN 7.4.0.</li>
</ul>

<h3>Version 1.3.0</h3>
<p><strong>Important change:</strong> Educational programs and educational profiles were separated. 