@@ -10,7 +10,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>R7.University.EduProgramDirectory</RootNamespace>
     <AssemblyName>R7.University.EduProgramDirectory</AssemblyName>
-    <ReleaseVersion>1.6.1</ReleaseVersion>
+    <ReleaseVersion>1.6.2</ReleaseVersion>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
