@@ -1,4 +1,14 @@
-﻿<h3>Version 1.6.1</h3>
+﻿<h3>Version 1.6.2</h3>
+<ul>
+    <li>EditEmployee: Better sorting for edu. program profiles dropdown.</li>
+    <li>EmployeeDetails: Show achivement description in the jQuery UI popup.</li>
+    <li>EmployeeDetails: Don't set tooltip for header row.</li>
+    <li>EmployeeDetails: Hide disciplines tab if there are no records.</li>
+    <li>EmployeeDetails: Use default popup window height.</li>
+    <li>EmployeeList: Show employee name as link to details popup.</li>
+</ul>
+
+<h3>Version 1.6.1</h3>
 <ul>
     <li>DivisionDirectory, EmployeeDirectory: Use Bootstrap styles for grids in search mode.</li>
     <li>DivisionDirectory, EmployeeDirectory: Hide not published divisions in search treeviews.</li>
